add disableDeleteByCreator option for workflows